<resources>

    <string name="app_name">Digital Fabrication Lab</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions." </string>

    <string-array name="payment">
        <item> Choose payment method: </item>
        <item> At Digital Fabrication Lab </item>
        <item> Baancode </item>
    </string-array>

    <string-array name="machine">
        <item> Choose machine: </item>
        <item> Connex 3 </item>
        <item> Form2 </item>
        <item> Ultimaker </item>
        <item> Lasercutter </item>
    </string-array>
    <string name="title_activity_requests">Requests</string>
    <string name="tab_text_1">Requests</string>
    <string name="tab_text_2">Printers</string>
    <string name="tab_text_3">Showcase</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sign_in">Sign In</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="create_account">Register</string>
    <string name="action_sign_up">Register account</string>
    <string name="no_data">No data has been found</string>

</resources>
